create first screen

--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
   "author": "",
   "license": "ISC",
   "browserslist": [
-    "last 2 versions"
+    "last 2 versions",
+    "> 1%",
+    "not dead"
   ],
   "devDependencies": {
     "browser-sync": "^2.27.10",
